_sass/base.scss
* {
  margin:0;
  border:0;
  box-sizing:border-box;
  padding:0
}

:root {
  --font-stack:system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Segoe UI Emoji", "Apple Color Emoji", "Noto Color Emoji", sans-serif;
  --font-stack-code:SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  --color-background:#f9f9f9;
  --color-text:#363636;
  --color-text-muted:#888;
  --color-link:#0076d1;
  --color-selection:#ddd
}

body {
  flex-wrap:wrap;
  display:flex;
  margin:20px auto;
  max-width:1000px;
  background-color:var(--color-background);
  font-family:var(--font-body, var(--font-stack));
  line-height:1.4;
  color:var(--color-text)
}

.wrapper-content {
  width:calc(100% - 250px);
  padding:0 15px
}

.wrapper-nav {
  width:250px;
  height:min-content;
  background-color:#efefef
}

footer {
  padding-top:4rem;
  color:var(--color-text-muted)
}

@media (max-width:768px) {
  body {
    margin:0 auto
  }
  .wrapper {
    width:100%
  }
  .wrapper-content {
    padding:15px
  }
}

